# Social-network-for-travelers

./: ..env.swp  .black  .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  Makefile  README.md  celery.logs  config.py  docker-compose.prod.yml  docker-compose.yml  pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/: github-actions-demo.yml
applications/account/: admin.py  middleware.py  models.py  serializers.py  tests.py  urls.py  views.py
applications/account/migrations/: 0001_initial.py  0002_alter_customuser_email.py  0003_customuser_create_posts.py  0004_customuser_is_blocked_alter_customuser_is_active.py  0005_customuser_bio.py  0006_alter_customuser_bio_alter_customuser_create_posts_and_more.py  0007_alter_customuser_is_blocked.py  0008_remove_customuser_create_posts_blockeduser.py  0009_remove_customuser_is_blocked_blockeduser_is_blocked.py
applications/comment/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
applications/comment/migrations/: 0001_initial.py
applications/countries/: apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
applications/countries/migrations/: 0001_initial.py  (+1 more)
applications/product/: admin.py  decorators.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
applications/subscriptions/: models.py  serializers.py  tests.py  urls.py  views.py
config/: celery.py  mixins.py  settings.py  urls.py
core/: config.py
nginx/: nginx.conf
permissions/: permissions.py
(+19 files in other folders)
